--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Modern Simple Website. Made by Vejas & Laurynas
+    &copy; 2025, Made by Vejas & Laurynas
   </footer>
 </body>
 </html>
