--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <nav class="toolbar">
+    <div class="toolbar-container">
+      <span class="logo">Pro1</span>
+      <ul class="toolbar-links">
+        <li><a href="index.html">Home</a></li>
+        <li><a href="about.html">About Us</a></li>
+      </ul>
+    </div>
+  </nav>
   <header>
     <div class="hero-title">Welcome to Your Modern Website</div>
     <div class="hero-subtitle">A clean, responsive, and beautiful template to kickstart your project.</div>
