--- a/index.html
+++ b/index.html
@@ -5,21 +5,23 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Modern Simple Website</title>
   <link href="https://fonts.googleapis.com/css?family=Roboto:400,700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Space+Mono:wght@400;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Futura:wght@300&family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
   <style>
-    body { margin:0; font-family:'Roboto',Arial,sans-serif; background:#f4f6fb; color:#222; }
+    body { margin:0; font-family:'Futura', 'Roboto', Arial, sans-serif; font-weight:300; background:#f4f6fb; color:#222; letter-spacing:0.01em; }
     header { text-align:center; background:linear-gradient(90deg,#667eea,#764ba2); color:#fff; padding:2.5rem 0 1.5rem 0; box-shadow:0 2px 8px #0001; }
-    .hero-title { font-size:2.5rem; margin:0; font-weight:700; letter-spacing:-1px; }
-    .hero-subtitle { font-size:1.2rem; margin:1rem 0 2rem 0; color:#e0e7ff; }
-    .cta-btn { background:#fff; color:#764ba2; border:none; border-radius:24px; padding:0.75rem 2rem; font-size:1.1rem; font-weight:700; cursor:pointer; box-shadow:0 2px 8px #0002; transition:background .2s,color .2s; }
+    .hero-title { font-size:2.5rem; margin:0; font-weight:300; letter-spacing:-1px; font-family:'Futura', 'Roboto', Arial, sans-serif; }
+    .hero-subtitle { font-size:1.2rem; margin:1rem 0 2rem 0; color:#e0e7ff; font-weight:300; font-family:'Futura', 'Roboto', Arial, sans-serif; }
+    .cta-btn { background:#fff; color:#764ba2; border:none; border-radius:24px; padding:0.75rem 2rem; font-size:1.1rem; font-weight:400; cursor:pointer; box-shadow:0 2px 8px #0002; transition:background .2s,color .2s; font-family:'Futura', 'Roboto', Arial, sans-serif; }
     .cta-btn:hover { background:#764ba2; color:#fff; }
     main { max-width:900px; margin:2.5rem auto; background:#fff; border-radius:12px; box-shadow:0 4px 24px #0002; padding:2.5rem 2rem; }
     .features { display:flex; flex-wrap:wrap; gap:2rem; justify-content:center; margin-top:2.5rem; }
     .feature-card { background:#f7f9fb; border-radius:10px; box-shadow:0 2px 8px #0001; padding:1.5rem 1.2rem; flex:1 1 220px; min-width:220px; max-width:260px; text-align:center; transition:transform .15s; }
     .feature-card:hover { transform:translateY(-6px) scale(1.03); box-shadow:0 6px 24px #764ba220; }
     .feature-icon { font-size:2.2rem; margin-bottom:0.7rem; color:#667eea; }
-    h2 { font-size:1.3rem; margin:0.5rem 0 0.7rem 0; }
-    p { margin-top:0.7rem; }
-    footer { text-align:center; color:#bbb; font-size:.98rem; margin-top:2.5rem; background:none; padding-bottom:1.5rem; }
+    h2 { font-size:1.3rem; margin:0.5rem 0 0.7rem 0; font-weight:300; font-family:'Futura', 'Roboto', Arial, sans-serif; }
+    p { margin-top:0.7rem; font-weight:300; font-family:'Futura', 'Roboto', Arial, sans-serif; }
+    footer { text-align:center; color:#bbb; font-size:.98rem; margin-top:2.5rem; background:none; padding-bottom:1.5rem; font-weight:300; font-family:'Futura', 'Roboto', Arial, sans-serif; }
     @media (max-width:700px) {
       main { padding:1.2rem 0.5rem; }
       .features { flex-direction:column; gap:1.2rem; }
@@ -52,7 +54,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Modern Simple Website. Crafted with ❤️
+    &copy; 2025 Modern Simple Website. Made by Vejas & Laurynas, with ❤️
   </footer>
 </body>
 </html>
