--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     </section>
   </main>
   <footer>
-    &copy; 2025 Modern Simple Website. Made by Vejas & Laurynas, with ❤️
+    &copy; 2025 Modern Simple Website. Made by Vejas & Laurynas
   </footer>
 </body>
 </html>
